--- a/src/assets/scss/base/variables.scss
+++ b/src/assets/scss/base/variables.scss
@@ -660,6 +660,9 @@ mat-accordion {
 .error-msg {
   color: red;
 }
+.success-msg{
+  color: green;
+}
 .error-msg.sameStartEndDate {
   padding-left: 4px;
   color: red;
