--- a/src/assets/scss/main.scss
+++ b/src/assets/scss/main.scss
@@ -31,6 +31,8 @@
 @import "./pages/report.scss";
 @import "./pages/paymentRecord.scss";
 @import "./pages/ngx-date.scss";
+@import "./pages/selectCurrency.scss";
+
 
 ::ng-deep .mat-horizontal-stepper-header {
   pointer-events: none !important;
