--- a/src/assets/scss/base/variables.scss
+++ b/src/assets/scss/base/variables.scss
@@ -238,6 +238,10 @@ input {
   width: 17%;
 }
 
+.width55Percent {
+  width: 50%;
+}
+
 .width50Percent {
   width: 50%;
 }
@@ -247,6 +251,15 @@ input {
 .width78Percent {
   width: 78%;
 }
+
+.width80Percent {
+  width: 80%;
+}
+
+.height12Percent {
+  height: 12%;
+}
+
 .max-width-128 {
   max-width: 128px;
 }
@@ -346,6 +359,10 @@ a:hover {
   color: $white-color !important;
 }
 
+.dropdown-padding.mat-form-field-appearance-legacy .mat-form-field-wrapper {
+  padding-top: 0px !important;
+  padding-bottom: 0px !important;
+}
 .mat-form-field-appearance-legacy .mat-form-field-wrapper {
   padding-top: 15px !important;
   padding-bottom: 0px !important;
@@ -457,6 +474,9 @@ a:hover {
   top: 45px;
 }
 .border-radius {
+  border-radius: 10px !important;
+}
+.border-round {
   border-radius: 10px !important;
 }
 
