--- a/src/app/features/auth/signup/signup.component.html
+++ b/src/app/features/auth/signup/signup.component.html
@@ -31,8 +31,11 @@
                 <span>{{ selectedCountry && selectedCountry.callingCode }}</span>
               </span>
             </mat-select-trigger>
-            <mat-option *ngFor="let country of countryList | SearchPipe: searchCountry:'countryName'" [value]="country" selected="trade.isAttatched"
-              >{{ country.countryName }}
+            <mat-option *ngFor="let country of countryList | SearchPipe: searchCountry:'countryName'" [value]="country"
+              ><span
+                ><img class="width17Percent p-r-10" [src]="country.imageUrl" alt="" />
+                <span>{{ country.countryCode }}</span>
+              </span>
             </mat-option>
           </mat-select>
         </mat-form-field>
