--- a/src/app/features/first-login/update-info/update-info.component.html
+++ b/src/app/features/first-login/update-info/update-info.component.html
@@ -62,8 +62,8 @@
                   </mat-error>
                 </mat-error>
                 <div class="row">
-                  <div class="col-xs-4">
-                    <mat-form-field class="width100Percent border-select mat-form-field-flex-mm-padding">
+                  <div class="col-xs-5">
+                    <mat-form-field class="width100Percent p-t-5 border-select mat-form-field-flex-mm-padding mat-form-field-infix-padding">
                       <mat-select formControlName="countryCode">
                         <div class="display-flex">
                           <input
@@ -86,7 +86,7 @@
                             <span>{{ selectedCountry && selectedCountry.callingCode }}</span>
                           </span>
                         </mat-select-trigger>
-                        <mat-option *ngFor="let country of countryList | SearchPipe: searchCountry:'countryName'" [value]="country"
+                        <mat-option *ngFor="let country of countryList | SearchPipe: searchCountry:'countryName'" [value]="country.callingCode"
                           ><span
                             ><img class="width17Percent p-r-10" [src]="country.imageUrl" alt="" />
                             <span>{{ country.countryCode }}</span>
@@ -95,7 +95,7 @@
                       </mat-select>
                     </mat-form-field>
                   </div>
-                  <div class="col-xs-8">
+                  <div class="col-xs-7">
                     <mat-form-field class="border-input w-100">
                       <input matInput type="text" placeholder="Phone No." formControlName="contactNo" />
                     </mat-form-field>
