--- a/src/assets/scss/pages/common.scss
+++ b/src/assets/scss/pages/common.scss
@@ -22,6 +22,12 @@
     padding-bottom: 0px !important ;
   }
 }
+.mat-form-field-infix-padding-all {
+  .mat-form-field-wrapper .mat-form-field-flex .mat-form-field-infix {
+    padding-bottom: 0px !important ;
+    padding-top: 0px !important ;
+  }
+}
 .mat-form-field-arrow-padding {
   .mat-form-field-wrapper .mat-form-field-flex .mat-form-field-infix .mat-select-arrow-wrapper {
     padding-top: 0px !important ;
