--- a/src/assets/scss/pages/selectCurrency.scss
+++ b/src/assets/scss/pages/selectCurrency.scss
@@ -4,6 +4,7 @@
     border-radius: 5px;
     padding: 3px;
     text-align: center;
+    background: #ffffff;
   }
   .country-currency{
     .mat-form-field-infix{
