--- a/src/app/features/rfq/create-rfq/rfq-project-materials/rfq-project-materials.component.html
+++ b/src/app/features/rfq/create-rfq/rfq-project-materials/rfq-project-materials.component.html
@@ -45,6 +45,23 @@
       </span>
     </div>
   </div>
+    <div class="row select-currency p-t-10 p-b-10" *ngIf="addRfq.rfqCurrency.exchangeCurrencyName">
+      <div class="col-sm-10 col-md-9"></div>
+      <div class="col-xs-12 col-sm-3 col-md-3">
+        <div class="base-currency">
+           <span class="text-semi-bold font-size-vary-grn color-6d6a6a">
+             <img width="25px" *ngIf="addRfq.rfqCurrency.exchangeCurrencyFlag" [src]="addRfq.rfqCurrency.exchangeCurrencyFlag">
+             {{addRfq.rfqCurrency.exchangeCurrencyName}} 
+           </span> 
+           <span class="p-l-5"> = </span>
+           <span class="p-l-5"> {{addRfq.rfqCurrency.exchangeValue}} </span>
+           <span class="p-l-5">
+            <img width="25px" *ngIf="addRfq.rfqCurrency.primaryCurrencyFlag" [src]="addRfq.rfqCurrency.primaryCurrencyFlag">
+              {{addRfq.rfqCurrency.primaryCurrencyName}}
+           </span>
+        </div>
+      </div>
+    </div>
 </form>
 <form *ngIf="rfqDetails.length" [formGroup]="materialForm">
   <span formArrayName="forms">
