sign in and sign up

--- a/src/app/features/auth/forgot-password/forgot-password.component.html
+++ b/src/app/features/auth/forgot-password/forgot-password.component.html
@@ -33,7 +33,7 @@
         <form *ngIf="forgetPassForm" [formGroup]="forgetPassForm" class="forget-pass-form">
           <ng-container *ngIf="phonescreenShow">
             <div class="row" *ngIf="phonescreenShow">
-              <div class="col-xs-3">
+              <div class="col-xs-4">
                 <mat-form-field class="border-select width100Percent p-t-5 mat-form-field-arrow-padding mat-form-field-infix-padding mat-form-field-flex-mm-padding">
                   <mat-select formControlName="countryCode">
                     <div class="display-flex">
@@ -50,16 +50,23 @@
                         <mat-icon>search</mat-icon>
                       </button>
                     </div>
-                    <!-- <mat-select-trigger>
-                      <mat-label>Select Country</mat-label>
-                    </mat-select-trigger> -->
+                    <mat-select-trigger>
+                      <span matTooltip="{{ selectedCountry && selectedCountry.countryCode }} {{ selectedCountry && selectedCountry.callingCode }}"
+                        ><img class="width35Percent p-r-10" [src]="selectedCountry && selectedCountry.imageUrl" alt="" />
+                        <span class="p-r-5 font-size12">{{ selectedCountry && selectedCountry.countryCode }}</span>
+                        <span class="font-size12 text-semi-bold">{{ selectedCountry && selectedCountry.callingCode }}</span>
+                      </span>
+                    </mat-select-trigger>
                     <mat-option *ngFor="let country of countryList | SearchPipe: searchCountry:'countryName'" [value]="country" selected="trade.isAttatched"
-                      >{{ country.countryName }}
+                      ><span
+                        ><img class="width17Percent p-r-10" [src]="country.imageUrl" alt="" />
+                        <span>{{ country.countryCode }}</span>
+                      </span>
                     </mat-option>
                   </mat-select>
                 </mat-form-field>
               </div>
-              <div class="col-xs-9">
+              <div class="col-xs-8">
                 <mat-form-field class="border-input display-flex">
                   <input
                     matInput
