Base Currency Done Signed-off-by: subham.saha@buildsupply.com <subham.saha@buildsupply.com>

--- a/src/app/shared/dialogs/select-currency/select-currency.component.html
+++ b/src/app/shared/dialogs/select-currency/select-currency.component.html
@@ -12,7 +12,7 @@
              Base Currency
            </span> 
            <span class="p-l-10">
-            <img *ngIf="currencyFields.primaryCurrencyFlag" [src]="currencyFields.primaryCurrencyFlag" width="25px"> 
+            <img *ngIf="currencyFields.primaryCurrencyFlag" [src]="primaryImageUrl" width="25px"> 
             {{primaryCurrencyName}}
            </span>
         </div>
