--- a/src/app/shared/dialogs/select-currency/select-currency.component.html
+++ b/src/app/shared/dialogs/select-currency/select-currency.component.html
@@ -12,7 +12,7 @@
              Base Currency
            </span> 
            <span class="p-l-10">
-            <img *ngIf="currencyFields.primaryCurrencyFlag" [src]="primaryImageUrl" width="25px"> 
+            <img *ngIf="primaryImageUrl" [src]="primaryImageUrl" width="25px"> 
             {{primaryCurrencyName}}
            </span>
         </div>
@@ -37,6 +37,13 @@
               <mat-icon>search</mat-icon>
             </button>
           </div>
+          <mat-select-trigger>
+            <span matTooltip="{{ selectedCountry && selectedCountry.currency }} {{ selectedCountry && selectedCountry.currencyCode }}"
+              ><img width="25px" [src]="selectedCountry && selectedCountry.imageUrl" alt="" />
+              <span class="p-r-5 font-size-vary-grn">{{ selectedCountry && selectedCountry.currency }}</span>
+              <span class="font-size-vary-grn text-semi-bold">{{ selectedCountry && selectedCountry.currencyCode }}</span>
+            </span>
+          </mat-select-trigger>
           <mat-option *ngFor="let cur of currencies | SearchPipe: searchText:'currency'" [value]="cur" 
           > 
             <div class="display-flex justify-content-space-between">
