--- a/src/app/features/auth/sign-in/sign-in.component.html
+++ b/src/app/features/auth/sign-in/sign-in.component.html
@@ -42,16 +42,17 @@
         </mat-form-field>
       </div>
     </div>
-
-    <mat-form-field class="col-xs-12 border-input">
-      <input matInput [type]="showPassWordString ? 'text' : 'password'" formControlName="password" placeholder="Password" />
-      <a>
-        <mat-icon class="password-eye" (click)="showPassWord()">remove_red_eye</mat-icon>
-      </a>
-      <div class="main-color">
-        <a class="pull-right p-t-20 cursor-pointer" (click)="goToForgetPass()">Forgot Password</a>
-      </div>
-    </mat-form-field>
+    <div class="row">
+      <mat-form-field class="col-xs-12 border-input">
+        <input matInput [type]="showPassWordString ? 'text' : 'password'" formControlName="password" placeholder="Password" />
+        <a>
+          <mat-icon class="password-eye" (click)="showPassWord()">remove_red_eye</mat-icon>
+        </a>
+        <div class="main-color">
+          <a class="pull-right p-t-20 cursor-pointer" (click)="goToForgetPass()">Forgot Password</a>
+        </div>
+      </mat-form-field>
+    </div>
 
     <div mat-dialog-actions class="col-xs-12 p-t-10">
       <button mat-raised-button class="main-background-color main-button color-white m-b-5" cdkFocusInitial style="width: 100%;" [disabled]="!signinForm.valid">
