--- a/src/app/features/rfq/create-rfq/rfq-supplier/rfq-supplier.component.html
+++ b/src/app/features/rfq/create-rfq/rfq-supplier/rfq-supplier.component.html
@@ -30,7 +30,7 @@
     </span>
   </div>
 </div>
-<div class="row select-currency p-t-10 p-b-10" *ngIf="rfqData.rfqCurrency.exchangeCurrencyName">
+<div class="row select-currency p-t-10 p-b-10" *ngIf="rfqData.rfqCurrency != null && rfqData.rfqCurrency.exchangeCurrencyName != null">
   <div class="col-sm-10 col-md-9"></div>
   <div class="col-xs-12 col-sm-3 col-md-3">
     <div class="base-currency">
