--- a/src/app/features/rfq/review/review.component.html
+++ b/src/app/features/rfq/review/review.component.html
@@ -49,7 +49,7 @@
                   View Terms & Conditions/Documents
                 </button>
               </div> -->
-              <div class="col-xs-3 select-currency p-t-10 p-b-10" *ngIf="finalRfq.rfqCurrency.exchangeCurrencyName">
+              <div class="col-xs-3 select-currency p-t-10 p-b-10" *ngIf="finalRfq.rfqCurrency!=null && finalRfq.rfqCurrency.exchangeCurrencyName">
                   <div class="base-currency">
                      <span class="text-semi-bold font-size-vary-grn color-6d6a6a">
                        <img width="25px" [src]="finalRfq.rfqCurrency.exchangeCurrencyFlag">
