sign in and sign up

--- a/src/app/features/po/po-detail-list/po-detail-list.component.html
+++ b/src/app/features/po/po-detail-list/po-detail-list.component.html
@@ -315,7 +315,7 @@
                       ><a (click)="downloadPo(element.purchaseOrderId)" matTooltip="Download PO"> <img src="../../../../assets/images/download-po.png" /> </a
                     ></span>
                     <span class="p-r-10 cursor-pointer float-right"
-                      ><a (click)="openPaymentRecord(element.purchaseOrderId)" matTooltip="Payment Record"><img src="../../../../assets/images/trackpayment.svg" /></a
+                      ><a (click)="openPaymentRecord(element)" matTooltip="Payment Record"><img src="../../../../assets/images/trackpayment.svg" /></a
                     ></span>
 
                     <!-- <span class="p-r-10"
