--- a/src/app/features/auth/sign-in/sign-in.component.html
+++ b/src/app/features/auth/sign-in/sign-in.component.html
@@ -25,10 +25,10 @@
                 <span class="font-size12 text-semi-bold">{{ selectedCountry && selectedCountry.callingCode }}</span>
               </span>
             </mat-select-trigger>
-            <mat-option *ngFor="let country of countryList | SearchPipe: searchCountry:'countryName'" [value]="country" selected="trade.isAttatched"
+            <mat-option *ngFor="let country of countryList | SearchPipe: searchCountry:'name'" [value]="country" selected="trade.isAttatched"
               ><span
                 ><img class="width17Percent p-r-10" [src]="country.imageUrl" alt="" />
-                <span>{{ country.name }}</span>
+                <span matTooltip="{{ country.name }}" class="limited-character universal">{{ country.name }}</span>
               </span>
             </mat-option>
           </mat-select>
